--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11194,10 +11194,12 @@ nav {
           align-items: stretch;
   height: 100%;
   width: 100%;
+  -webkit-transition: 1s all;
+  transition: 1s all;
 }
 
 .left-panel {
-  width: 25%;
+  width: 35vh;
   background-color: #0b2e13;
   -webkit-box-shadow: 15px 0px 28px -15px rgba(0, 0, 0, 0.75);
           box-shadow: 15px 0px 28px -15px rgba(0, 0, 0, 0.75);
@@ -11208,11 +11210,10 @@ nav {
 }
 
 .left-panel.retracted {
-  width: 0%;
   -webkit-box-shadow: none;
           box-shadow: none;
-  -webkit-transform: translate3d(-100%, 0, 0);
-          transform: translate3d(-100%, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
 }
 
 .frame-panel {
@@ -11220,7 +11221,8 @@ nav {
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   border: none;
-  background-color: #218838;
+  background: -webkit-gradient(linear, left top, right top, from(#003cff), to(#553390));
+  background: linear-gradient(to right, #003cff 0%, #553390 100%);
   -webkit-transition: 1s all;
   transition: 1s all;
 }
@@ -11282,6 +11284,16 @@ nav {
   content: "\F00D";
   cursor: pointer;
   padding: 5px;
+}
+
+.flex-embed-expanded {
+  width: 100%;
+}
+
+.flex-embed-retracted {
+  width: 125vw;
+  -webkit-transform: translateX(-20%);
+          transform: translateX(-20%);
 }
 
 * {
