--- a/resources/assets/sass/files/search.scss
+++ b/resources/assets/sass/files/search.scss
@@ -372,10 +372,11 @@
   align-items: stretch;
   height: 100%;
   width: 100%;
+  transition: 1s all;
 }
 
 .left-panel {
-  width: 25%;
+  width: 35vh;
   background-color: #0b2e13;
   box-shadow: 15px 0px 28px -15px rgba(0,0,0,0.75);
   z-index: 10;
@@ -383,9 +384,8 @@
   transition: 1s all;
 
   &.retracted {
-    width: 0%;
     box-shadow: none;
-    transform: translate3d(-100%,0,0);
+    transform: translate3d(0,0,0);
   }
 
   &.expanded {
@@ -395,8 +395,7 @@
 .frame-panel {
   flex: 1 1 auto;
   border: none;
-  background-color: #218838;
-  transition: 1s all;
+  background: linear-gradient(to right, rgba(0,60,255,1) 0%, rgba(85,51,144,1) 100%);  transition: 1s all;
   &.retracted {
     width: 100%;
     transition: 1s transform, 1s box-shadow;
@@ -450,4 +449,13 @@
   content: "\F00D";
   cursor: pointer;
   padding: 5px;
+}
+
+.flex-embed-expanded {
+  width: 100%;
+}
+
+.flex-embed-retracted {
+  width: 125vw;
+  transform: translateX(-20%);
 }
