--- a/resources/assets/sass/files/search.scss
+++ b/resources/assets/sass/files/search.scss
@@ -468,6 +468,12 @@
   border-radius: 9999px;
   background-color: white;
   box-shadow: 0px 0px 31px -4px rgba(0,0,0,0.75);
+  transition: all 0.4s;
+}
+
+.close-embed:hover::after{
+  transform: scale(1.1);
+  box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.75);
 }
 
 .flex-embed-expanded {
