--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10690,7 +10690,7 @@ nav {
 }
 
 .home-text p {
-  margin-bottom: 20px;
+  margin-bottom: 4rem;
 }
 
 .home-text h1 {
@@ -11403,6 +11403,30 @@ nav {
 
   100% {
     background-position: 0% 50%;
+  }
+}
+
+@media screen and (max-device-width: 900px) {
+  .entries {
+    width: 100%;
+  }
+
+  .facets {
+    display: none;
+  }
+
+  .resultscontainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .studentcard {
+    width: 100%;
   }
 }
 
