--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/icon?family=Material+Icons);/*!
+/*!
  * Bootstrap v4.1.1 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
@@ -10420,6 +10420,13 @@ a.text-dark:focus {
   -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+  color: #007bff;
+  text-decoration: none;
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects;
+}
+
 .vertical-line {
   width: 1px;
   height: initial;
@@ -10542,6 +10549,23 @@ main {
   z-index: 1000;
 }
 
+.bg-light {
+  background-color: #eef0fd !important;
+}
+
+.navbar-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+
 .navbar-light .navbar-nav .button-register:hover,
 .navbar-light .navbar-nav .button-register:focus {
   color: white;
@@ -10563,6 +10587,34 @@ main {
 
 .navbar-light .navbar-nav .button-register:hover {
   color: #e2f1ff;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 10rem;
+  padding: 0.5rem 0;
+  margin: 0.125rem 0 0;
+  font-size: 1rem;
+  color: #212529;
+  text-align: left;
+  list-style: none;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+}
+
+.dropdown-menu a {
+  color: #2d00ff;
+}
+
+.dropdown-item:active {
+  text-decoration: none;
+  background-color: #d0d0d0;
 }
 
 .navbar-brand {
@@ -10587,6 +10639,73 @@ main {
 
 nav {
   font-family: "Montserrat Light", "DejaVu Sans", sans-serif;
+}
+
+@media (min-width: 768px) {
+  .navbar-expand-md .navbar-collapse {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+  }
+}
+
+.collapse:not(.show) {
+  display: none;
+}
+
+.navbar-collapse {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .navbar-expand-md .navbar-nav .dropdown-menu {
+    position: absolute;
+  }
+}
+
+@media (min-width: 768px) {
+  .navbar-expand-md {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
+.navbar-toggler:not(:disabled):not(.disabled) {
+  cursor: pointer;
+}
+
+.navbar-light .navbar-toggler {
+  color: rgba(0, 0, 0, 0.5);
+  border-color: rgba(0, 0, 0, 0.1);
+}
+
+@media (min-width: 768px) {
+  .navbar-expand-md .navbar-toggler {
+    display: none;
+  }
+}
+
+.navbar-toggler {
+  padding: 0.25rem 0.75rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
 }
 
 .banner {
@@ -11259,13 +11378,14 @@ nav {
 
 .left-panel {
   width: 25vw;
-  background-color: #0b2e13;
+  background-color: white;
   -webkit-box-shadow: 15px 0px 28px -15px rgba(0, 0, 0, 0.75);
           box-shadow: 15px 0px 28px -15px rgba(0, 0, 0, 0.75);
   z-index: 10;
   position: relative;
   -webkit-transition: 1s all;
   transition: 1s all;
+  padding: 1.2rem;
 }
 
 .left-panel.retracted {
@@ -11284,7 +11404,7 @@ nav {
           animation: loadingResume 10s ease infinite;
 }
 
-.frame-panel.retracted {
+.frame-panel .retracted {
   width: 100%;
   -webkit-transition: 1s -webkit-transform, 1s -webkit-box-shadow;
   transition: 1s -webkit-transform, 1s -webkit-box-shadow;
@@ -11402,6 +11522,47 @@ nav {
   100% {
     background-position: 0% 50%;
   }
+}
+
+.student-name {
+  font-size: 2rem;
+}
+
+.internship-preference,
+.internship-duration {
+  font-size: 1.2rem;
+}
+
+.internship-preference > .name-category,
+.internship-duration > .name-category {
+  color: #3a54ab;
+}
+
+.description {
+  margin-top: 3rem;
+  line-height: 1.3;
+}
+
+.resume-static {
+  color: white;
+  display: block;
+  position: absolute;
+  text-align: center;
+  background: -webkit-gradient(linear, left top, right top, from(#003cff), to(#553390));
+  background: linear-gradient(to right, #003cff 0%, #553390 100%);
+  width: 85%;
+  padding: 10px 0;
+  border-radius: 40px;
+  bottom: 5%;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.resume-static:hover {
+  color: white;
+  text-decoration: none;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 @media screen and (max-device-width: 900px) {
