--- a/resources/assets/sass/files/search.scss
+++ b/resources/assets/sass/files/search.scss
@@ -387,11 +387,12 @@
 
 .left-panel {
   width: 25vw;
-  background-color: #0b2e13;
+  background-color: white;
   box-shadow: 15px 0px 28px -15px rgba(0,0,0,0.75);
   z-index: 10;
   position: relative;
   transition: 1s all;
+  padding: 1.2rem;
 
   &.retracted {
     box-shadow: none;
@@ -404,10 +405,10 @@
 .frame-panel {
   flex: 1 1 auto;
   border: none;
-  background: linear-gradient(135deg, rgba(0,60,255,1) 15%,rgba(85,51,144,1) 56%);;
+  background: linear-gradient(135deg, rgba(0,60,255,1) 15%,rgba(85,51,144,1) 56%);
   background-size: 400% 400%;
   animation: loadingResume 10s ease infinite;
-  &.retracted {
+  .retracted {
     width: 100%;
     transition: 1s transform, 1s box-shadow;
   }
@@ -495,6 +496,44 @@
     background-position: 0% 50%
   }
 }
+
+.student-name {
+  font-size: 2rem;
+}
+
+.internship-preference,
+.internship-duration {
+  font-size: 1.2rem;
+}
+.internship-preference>.name-category ,
+.internship-duration>.name-category {
+  color: #3a54ab;
+}
+
+.description {
+  margin-top: 3rem;
+  line-height: 1.3;
+}
+
+.resume-static {
+  color: white;
+  display: block;
+  position: absolute;
+  text-align: center;
+  background: linear-gradient(to right, rgba(0,60,255,1) 0%, rgba(85,51,144,1) 100%);
+  width: 85%;
+  padding: 10px 0;
+  border-radius: 40px;
+  bottom: 5%;
+  transition: all 0.4s;
+}
+
+.resume-static:hover {
+  color: white;
+  text-decoration: none;
+  transform: scale(1.1);
+}
+
 
 @media screen and (max-device-width: $responsive-breakpoint){
   .entries{
