--- a/resources/assets/sass/files/forms.scss
+++ b/resources/assets/sass/files/forms.scss
@@ -180,6 +180,7 @@ textarea {
   cursor: pointer;
 }
 .btn-group-toggle > .btn, .btn-group-toggle > .btn-group > .btn {
+  width: 100%;
   margin-bottom: 0;
 }
 .btn-group > .btn {
