--- a/presentation/presentation.css
+++ b/presentation/presentation.css
@@ -1,4 +1,3 @@
-@media (min-width:700px){
 body {
     color: #083d77;
 }
@@ -14,12 +13,17 @@ body {
     -moz-box-shadow: 0px 2px 27px -4px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 2px 27px -4px rgba(0, 0, 0, 0.75);
     width: 800px;
+
 }
 
 
 div {
     width: 80%;
     margin: 0 auto;
+}
+
+.content {
+    margin-bottom: 30px;
 }
 
 
@@ -31,21 +35,20 @@ h1 {
 
 h2,
 p {
-    margin-top: 50px
+    margin-top: 20px;
 }
 
 
 
 
 .video {
-
     margin-top: 50px;
     margin-bottom: 50px;
-    margin-right: 0;
-
-
-
-
+    text-align: center;
+    width: auto;
 
 }
+
+span {
+    font-weight: bold;
 }
