--- a/presentation/presentation.css
+++ b/presentation/presentation.css
@@ -3,7 +3,7 @@ body {
 }
 
 
-.title {
+.container-presentation {
 
     display: flex;
     justify-content: center;
@@ -52,3 +52,13 @@ p {
 span {
     font-weight: bold;
 }
+
+button,
+input {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    font-family: sans-serif;
+}
+
+<button type="submit" class="btn w-100" > Trouver mon bonheur</button >
