--- a/presentation/presentation.css
+++ b/presentation/presentation.css
@@ -1,41 +1,46 @@
 body {
     color: #083d77;
+
 }
 
 
 .container-presentation {
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
+
     margin-top: 15px;
     -webkit-box-shadow: 0px 2px 27px -4px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 2px 27px -4px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 2px 27px -4px rgba(0, 0, 0, 0.75);
     width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+
 
 }
 
 
-div {
-    width: 80%;
-    margin: 0 auto;
-}
+
 
 .content {
     margin-bottom: 30px;
+    width: 750px
 }
 
 
 h1 {
     justify-content: center;
     display: flex;
+    padding-top: 15px
 }
+
+;
 
 
 h2,
 p {
     margin-top: 20px;
+
 }
 
 .video {
@@ -52,5 +57,5 @@ span {
 
 .button-to-search {
     height: auto;
-
+    padding-bottom: 15px
 }
