--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,7 +2,7 @@
 @import "variables";
 
 // Bootstrap
-//@import "~bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/bootstrap";
 
 // Our own classes
 
