--- a/resources/assets/sass/files/global.scss
+++ b/resources/assets/sass/files/global.scss
@@ -80,3 +80,39 @@ input {
     box-shadow: 0 0 0 0.2rem rgba(128, 0, 199, 0.25);
   }
 }
+
+footer {
+  background: linear-gradient(to right, rgba(0, 60, 255, 0.5) 0%,rgba(85, 51, 144, 0.5) 100%);
+  display: flex;
+  width: 100%;
+  padding: 1rem calc(1rem + 5%);
+  margin: 0 auto;
+  position: relative;
+}
+
+footer>div {
+  //width: 100%;
+  margin: 2rem;
+}
+
+footer p,
+footer h2 {
+  color: hsl(236, 100%, 20%);
+}
+
+.location {
+  max-width: 200px;
+  min-width: 10rem;
+}
+
+@media screen and (max-device-width: $responsive-breakpoint) {
+  footer {
+    flex-direction: column;
+  }
+  footer>div {
+    margin: 1rem;
+  }
+  .location {
+    max-width: initial;
+  }
+}
