--- a/resources/assets/sass/files/forms.scss
+++ b/resources/assets/sass/files/forms.scss
@@ -153,6 +153,7 @@ textarea {
   position: relative;
   display: inline-flex;
   vertical-align: middle;
+  width: 100%;
 }
 
 .btn-group:not(:last-child) > .btn, .btn-group > .btn-group:not(:last-child) > .btn {
