--- a/resources/assets/sass/files/home.scss
+++ b/resources/assets/sass/files/home.scss
@@ -136,6 +136,46 @@
   }
 }
 
+.container-presentation {
+  display: block;
+  margin-top: 15px;
+  box-shadow: 0px 2px 27px -4px rgba(0, 0, 0, 0.75);
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container-presentation .content {
+  width: auto;
+}
+
+.container-presentation h1 {
+  justify-content: center;
+  display: flex;
+  padding-top: 15px;
+}
+.container-presentation h2,
+.container-presentation p {
+  margin-top: 20px;
+}
+
+.video {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  text-align: center;
+  width: auto;
+
+}
+
+.container-presentation span {
+  font-weight: bold;
+}
+
+.container-presentation .button-to-search {
+  height: auto;
+  padding-bottom: 15px
+}
+
 @media screen and (max-width: $responsive-breakpoint) {
   .register-bloc-container {
     transform: translateY(0);
