--- a/resources/assets/sass/files/home.scss
+++ b/resources/assets/sass/files/home.scss
@@ -121,7 +121,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 35vh;
+  margin-top: 10vh;
+  margin-bottom: 10vh;
 }
 
 .button-to-search>a {
