Enterprise creation alert success

--- a/resources/assets/sass/files/forms.scss
+++ b/resources/assets/sass/files/forms.scss
@@ -233,3 +233,7 @@ input[type="radio"], input[type="checkbox"] {
 .enterprise-group {
   display: none;
 }
+
+.invalid-feedback {
+  color: #d82c2c;
+}
