--- a/offres/lecssquetumodifies.css
+++ b/offres/lecssquetumodifies.css
@@ -10,6 +10,10 @@ Il est égalemetn préférable de ne pas utiliser le style "ombre" de la page d'
     margin-bottom: 50px;
 }
 
+.row-margin{
+    margin-right: 50px
+}
+
 .offer-link {
     border: solid 2px;
     border-style: dashed;
@@ -30,8 +34,7 @@ Il est égalemetn préférable de ne pas utiliser le style "ombre" de la page d'
 .card {
     margin-bottom:
 }
-
-.container {
+ .affichage {
     border: solid 2px;
     border-style: dashed;
     width: 25%;
@@ -40,3 +43,4 @@ Il est égalemetn préférable de ne pas utiliser le style "ombre" de la page d'
     border-color: #0000ff;
 
 }
+
